--- a/RDEvent/Views/Home/Index.cshtml
+++ b/RDEvent/Views/Home/Index.cshtml
@@ -3,5 +3,285 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
+<!DOCTYPE html>
+<html lang="zxx">
+
+
+
+    
+<body>
+    <section class="background-image">
+        <div class="bg-image img1"></div>
+        <div class="bg-image img2"></div>
+
+        <div class="bg-text"></div>
+    </section>
+   
+    <section class="Events">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="column-sm-2 ">
+                        <a href="/Register/Index">
+                            <img src="~/Content/Images/Register.jpg" style="width:20%">
+                        </a>
+                        <a href="/Login/Index">
+                            <img src="~/Content/Images/Userlogin.jpg" style="width:20%">
+                        </a>
+                        <a href="/Login/Admin">
+                            <img src="~/Content/Images/Adminlogin.png" style="width:20%">
+                        </a>
+                    </div>
+                    <div class="column-sm-2">
+                        <a href="/Events/Index">
+                            <img src="~/Content/Images/Events.jpg" style="width:25%">
+                        </a>
+                        <a href="/News/Index">
+                            <img src="~/Content/Images/News.png" style="width:20%">
+                        </a>
+                        <a href="https://www.google.com/maps/search/?api=1&parameters">
+                            <img src="~/Content/Images/Maps.png" style="width:15%">
+                        </a>
+                    </div>
+
+                </div>
+                <div class="col-lg-6">
+                    <div class="about__text">
+                        <div class="section-title">
+                            <h2>Upcoming Events</h2>
+                        </div>
+                        <img src="~/Content/maxresdefault.jpg" style="width:50%">
+                        <p>
+                            Game 1  . Welligton   . Region3
+                        </p>
+                        <img src="~/Content/Images/Derby1.jpg" style="width:50%">
+                        <p>
+                            Game 1  . Auckland   . Region1
+                        </p>
+                        <a href="#" class="primary-btn">Register</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gallery">
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 4</div>
+                <img src="~/Content/Images/Gallery1.jpg" style="width:100%">
+                <div class="text">R1</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 4</div>
+                <img src="~/Content/Images/Gallery2.jpg" style="width:100%">
+                <div class="text">R2</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="~/Content/Images/Gallery3.jpg" style="width:100%">
+                <div class="text">R3</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="~/Content/Images/Gallery4.jpg" style="width:100%">
+                <div class="text">R4</div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+
+        </div>
+    </section>
+
+    <script>
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
+    </script>
+
+</body>
+
+</html>
+
+<style>
+
+    * {
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 0;
+        font-family: Arial;
+    }
+
+    /* Create two equal columns that floats next to each other */
+    .column-md-2 {
+        float: left;
+        width: 30%;
+        padding: 10px;
+    }
+
+        .column-md-2 img {
+            margin-top: 12px;
+        }
+
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: inline-block;
+        clear: both;
+    }
+     
+       .background-image body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        * background-image{
+            box-sizing: border-box;
+        }
+
+       background-image .bg-image {
+            /* Full height */
+            height: 50%;
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        /* Images used */
+        .img1 {
+            background-image: url("/Content/Images/Roller.Background.jpg");
+        }
+
+        .img2 {
+            background-image: url("'/Content/Images/Roller.Background 2.jpg'");
+        }
+        
+     
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+</style>
+      
