--- a/RDEvent/Views/Events/AdminEvents.cshtml
+++ b/RDEvent/Views/Events/AdminEvents.cshtml
@@ -7,5 +7,19 @@
 <center>
     <h1 Style="background-color: black;color:pink;"> Add Events </h1>
 </center>
+<body>
+   
+
+    <p>
+        Emralds Women vs Rubbies Women . Wellington . Region3
+    </p>
+
+    <a href="/Events/EditEvent/" class="site-btn"> Edit Event</a>
+    <p>
+        Emralds Men vs Rubbies Men . Auckland . Region1
+    </p>
+    <a href="/Events/EditEvent/" class="site-btn"> Edit Event</a>
+    
+</body>
 </html>
 
