--- a/RDEvent/Views/Events/EditEvent.cshtml
+++ b/RDEvent/Views/Events/EditEvent.cshtml
@@ -34,7 +34,7 @@
     <br />
     
     <center>
-        <p> <a href="~/Event/Index"> <div class="button"><center>Submit</center>  </div> </a></p>
+        <p> <a href="/Home/Admin/"> <div class="button"><center>Submit</center>  </div> </a></p>
     </center>
 
 
@@ -73,8 +73,8 @@
 
         /* Set a style for the submit/register button */
         .button {
-            background-color: #4CAF50;
-            color: black;
+            background-color: black;
+            color: white;
             padding: 16px 20px;
             margin: 20px 0;
             border: none;
@@ -89,7 +89,7 @@
 
         /* Add a blue text color to links */
         a {
-            color: black;
+            color: white;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
