--- a/RDEvent/Views/Home/Admin.cshtml
+++ b/RDEvent/Views/Home/Admin.cshtml
@@ -3,50 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-    <header class="header">
-
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10">
-                    <ul>
-
-                        <li><a href="~/Profile/Index">Update Profile</a></li>
-                        <li><a href="~/Home/Index">Logout</a></li>
-                    </ul>
-                    <style>
-
-    .header-link-right {
-        max-width: 10%;
-    }
-
-        .header-link-right li, ul {
-            text-decoration-color: white;
-            display: inline-block;
-    color: #fefefe;
-    margin-right: 0 10px 0;
-    padding-right: 0.5em;
-        }
-
-        .header-link-right.a {
-            border-color: white;
-        }
-
    
-</style>
-
-                  
-                </div>
-            </div>
-               
-            
-        </div>
-
-
-
-
-
-    </header>
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -54,6 +11,22 @@
 
 
 <body>
+    <div class="col-lg-20 col-md-20">
+        <div class="header_title">
+
+        </div>
+        <div class="header__nav">
+
+            <div class="header-link-right">
+
+               
+                &nbsp;&nbsp;
+                <a href="~/Home/Index"><i></i>Logout</a>
+
+            </div>
+        </div>
+    </div>
+
     <section class="background-image">
         <div class="bg-image img1"></div>
         <div class="bg-image img2"></div>
