--- a/RDEvent/Views/Register/Index.cshtml
+++ b/RDEvent/Views/Register/Index.cshtml
@@ -17,7 +17,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter Email" name="Email" required>
             <br />
             <br />
-            <label for="psw"><b>choose Password</b></label>
+            <label for="psw"><b>Choose Password</b></label>
             &nbsp;<input type="password" placeholder="Enter Password" name="psw" required>
             <br />
             <br />
@@ -27,7 +27,7 @@
             <br
         </div>
 
-        <p> By proceddig you also agree to the terms of service and private policy</p>
+        <p> By proceeding you also agree to the terms of service and private policy</p>
         <br />
 
 
