--- a/RDEvent/Views/Events/AddEvents.cshtml
+++ b/RDEvent/Views/Events/AddEvents.cshtml
@@ -51,7 +51,7 @@
     
 
     <center>
-        <p> <a href="~/Event/Index"> <div class="button"><center>Submit</center>  </div> </a></p>
+        <p> <a href="~/Events/AdminEvents/"> <div class="button"><center>Submit</center>  </div> </a></p>
     </center>
 
 
@@ -90,8 +90,8 @@
 
         /* Set a style for the submit/register button */
         .button {
-            background-color: #4CAF50;
-            color: black;
+            background-color: black;
+            color: white;
             padding: 16px 20px;
             margin: 20px 0;
             border: none;
@@ -106,7 +106,7 @@
 
         /* Add a blue text color to links */
         a {
-            color: black;
+            color:white;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
