--- a/RDEvent/Views/Events/Index.cshtml
+++ b/RDEvent/Views/Events/Index.cshtml
@@ -7,4 +7,18 @@
     <center>
         <h1 Style="background-color: black;color:pink;"> Events </h1>
     </center>
+    <body>
+
+
+        <p>
+            Emralds Women vs Rubbies Women . Wellington . Region3
+        </p>
+
+        <a href="~/Views/Profile/Availability.cshtml" class="site-btn"> Change Availability</a>
+        <p>
+            Emralds Men vs Rubbies Men . Auckland . Region1
+        </p>
+        <a href="~/Views/Profile/Availability.cshtml" class="site-btn"> Change Availability</a>
+
+    </body>
     </html>
