--- a/RDEvent/Views/Login/Index.cshtml
+++ b/RDEvent/Views/Login/Index.cshtml
@@ -85,7 +85,7 @@
 
         /* Add a blue text color to links */
         a {
-            color: dodgerblue;
+            color: white;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
