--- a/RDEvent/Views/Profile/Index.cshtml
+++ b/RDEvent/Views/Profile/Index.cshtml
@@ -71,7 +71,7 @@
         /* Set a style for the submit/register button */
         .button {
             background-color: #000000;
-            color: black;
+            color: white;
             padding: 16px 20px;
             margin: 8px 0;
             border: none;
