--- a/RDEvent/Views/Shared/_Layout.cshtml
+++ b/RDEvent/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+<h1>Roller Derby Association NewZealand Incorporated</h1>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,7 +10,7 @@
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
 
-<h1><center>Roller Derby Association NewZealand Incorporated</center></h1>
+
 <body>
     <header class="header">
 
@@ -27,9 +28,15 @@
 
 
 
-
+        </div>
 
     </header>
+    <section class="background-image">
+        <div class="bg-image img1"> </div>
+        <div class="bg-image img2"> </div>
+
+        <div class="bg-text"> </div>
+    </section>
     <div class="container body-content">
         @RenderBody()
     </div>
@@ -61,3 +68,39 @@
 
 </body>
 </html>
+<style>
+    h1 {
+    text-align:center;
+    font-size: 30px;
+
+}
+     .background-image body, html {
+        height: 100%;
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    * background-image {
+        box-sizing: border-box;
+    }
+
+    background-image .bg-image {
+        /* Full height */
+        height: 50%;
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    /* Images used */
+    .img1 {
+        background-image: url("/Content/Images/Events.jpg");
+    }
+
+    .img2 {
+        background-image: url("'/Content/Images/Roller.Background 2.jpg'");
+    }
+
+
+</style>
